--- a/bc21/public/index.html
+++ b/bc21/public/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="main.js" type="module" defer></script>
   
   <title>Bora codar - 21</title>
 </head>
@@ -27,7 +28,7 @@
 
     <main class="products">
       <div class="product-card">
-        <img src="assets/product-image-monitor.jpg" alt="monitor de tela curva da Samsung">
+        <img src="../assets/product-image-monitor.jpg" alt="monitor de tela curva da Samsung">
         <div class="product">
           <div class="content">
             <p class="paragraph">Monitor Gamer Curvo 49 DQHD, 240Hz, 1ms, HDMI e</p>
@@ -45,7 +46,7 @@
         </div>
       </div>
       <div class="product-card">
-        <img src="assets/product-image-cadeira.jpg" alt="teclado gamer">
+        <img src="../assets/product-image-cadeira.jpg" alt="teclado gamer">
         <div class="product">
           <div class="content">
             <p class="paragraph">Cadeira Gamer  RGB - Preta com Iluminação (Led)</p>
@@ -64,7 +65,7 @@
       </div>
 
       <div class="product-card">
-        <img src="assets/product-image-teclado.jpg" alt="monitor de tela curva da Samsung">
+        <img src="../assets/product-image-teclado.jpg" alt="monitor de tela curva da Samsung">
         <div class="product">
           <div class="content">
             <p class="paragraph">Teclado Gamer Mecânico Low Profile RGB AW510K 580</p>
@@ -83,7 +84,7 @@
       </div>
 
       <div class="product-card">
-        <img src="assets/product-image-headset.jpg" alt="headset gamer">
+        <img src="../assets/product-image-headset.jpg" alt="headset gamer">
         <div class="product">
           <div class="content">
             <p class="paragraph">Headset Gamer RGB Preto</p>
@@ -102,7 +103,7 @@
       </div>
 
       <div class="product-card">
-        <img src="assets/product-image-patinho.jpg" alt="pato de borracha">
+        <img src="../assets/product-image-patinho.jpg" alt="pato de borracha">
         <div class="product">
           <div class="content">
             <p class="paragraph">Patinho De Borracha Para Banho</p>
@@ -137,6 +138,5 @@
   </div>
 
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
-  <script src="main.js" type="module"></script>
 </body>
 </html>
